# AI-Resume-Screening

./: README.md  app.py  pyproject.toml  requirements.txt
